noticed page layout issue on resume. fixed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -195,7 +195,7 @@ body {
     margin-left: 20px;
     color: darkgoldenrod;
     font-size: 16px;
-    font-family: Slabo;
+    font-family: open-sans;
     opacity: 50%;
 }
 
